fix gradient on safari

--- a/code/styles.css
+++ b/code/styles.css
@@ -66,7 +66,7 @@ h2 {
 .circle {
     position: absolute;
     background-color: #A9C9FF;
-    background-image: linear-gradient(180deg, #A9C9FF 0%, #FFBBEC 100%);
+    background-image: -webkit-linear-gradient(180deg, #A9C9FF 0%, #FFBBEC 100%);
     
    filter: blur(50px);
     opacity: 0.3;
